fix: login page layout issue

--- a/login.css
+++ b/login.css
@@ -96,7 +96,6 @@ header h1 span{
     color: #fff;
     font-size: 18px;
     border: none;
-    cursor: pointer;
 }
 
 
